<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home_account_profile"
        android:visible="true"
        app:showAsAction="never|withText"
        android:icon="@drawable/ic_account">

        <menu>
            <item
                android:id="@+id/account_profile"
                android:title="@string/home_account_account"
                android:visible="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/account_settings"
                android:title="@string/home_account_settings"
                android:visible="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/account_log_out"
                android:title="@string/home_account_log_out"
                android:visible="true"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:title="@string/collection_filter"
        android:visible="true"
        android:iconTint="@color/searchDarkColor"
        android:icon="@drawable/ic_filter_results"
        app:showAsAction="never|withText">

        <menu>
            <group android:id="@+id/filter_options"
                android:menuCategory="container"
                android:visible="true">

                <item
                    android:id="@+id/filter_artist"
                    android:title="@string/collection_filter_artist" />
                <item
                    android:id="@+id/filter_track"
                    android:title="@string/collection_filter_track" />
                <item
                    android:id="@+id/filter_album"
                    android:title="@string/collection_filter_album" />
                <item
                    android:id="@+id/filter_all"
                    android:title="@string/collection_filter_all" />

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/collection_refresh"
        android:title="@string/collection_refresh"
        android:visible="true"
        app:showAsAction="never"/>

</menu>