<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/iconsTextColor">

    <LinearLayout
        android:id="@+id/reply_author_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin_component"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/reply_author_caption"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/thread_edit_account_description"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/reply_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_component"
            android:layout_marginStart="@dimen/activity_margin_component"
            android:text="@string/app_component_author" />

    </LinearLayout>

    <EditText
        android:id="@+id/reply_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:layout_below="@id/reply_author_layout"
        android:textColor="@color/defaultTextColor"
        android:textColorHint="@color/defaultTextColor"
        android:paddingHorizontal="@dimen/activity_margin_component"
        android:paddingVertical="@dimen/activity_margin_sibling"
        android:background="@android:color/transparent"
        android:lines="2"
        android:minLines="2"
        android:hint="@string/forum_thread_reply_content_hint"
        android:inputType="textMultiLine"
        android:textSize="@dimen/activity_text_paragraph"/>

    <ImageView
        android:id="@+id/reply_action"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="@dimen/activity_margin_component"
        android:contentDescription="@string/thread_edit_submit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/reply_value"
        android:src="@drawable/ic_thread_submit"/>

</RelativeLayout>