<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin_relative"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_relative"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/caption"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/comment_caption"
            android:src="@drawable/ic_account"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_span"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/primaryTextColor"
                android:alpha="0.8"
                android:textStyle="bold"
                tools:text="@string/app_tools_placeholder"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_span"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/activity_margin_sibling"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/app_tools_placeholder_date"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/activity_margin_sibling"
        android:paddingHorizontal="@dimen/activity_margin_relative"
        android:textSize="@dimen/activity_text_subparagraph"
        android:textColor="@color/primaryTextColor"
        tools:text="@string/app_tools_placeholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin_sibling"
        android:paddingBottom="@dimen/activity_margin_sibling">

        <TextView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_relative"
            android:drawableLeft="@drawable/ic_like"
            android:drawableStart="@drawable/ic_like"
            android:drawablePadding="@dimen/activity_margin_relative"
            android:drawableTint="@color/pleasureColor"
            tools:text="@string/app_tools_placeholder_number"/>

        <TextView
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_relative"
            android:drawableLeft="@drawable/ic_chat"
            android:drawableStart="@drawable/ic_chat"
            android:drawablePadding="@dimen/activity_margin_relative"
            android:drawableTint="@color/pleasureColor"
            android:text="@string/forum_thread_comment_reply"/>

    </LinearLayout>

</LinearLayout>