<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/release_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/home_release_caption"
        tools:src="@drawable/thumbnail"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_margin_relative"
        android:layout_marginStart="@dimen/activity_margin_relative"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/release_caption"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/release_impact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_release_impact"
                android:src="@drawable/ic_impact"/>

            <TextView
                android:id="@+id/release_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/activity_text_ogre"
                android:textStyle="bold"
                tools:text="10.0"/>

        </LinearLayout>

        <TextView
            android:id="@+id/release_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_component"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/activity_text_paragraph"
            android:textStyle="bold"
            tools:text="@string/app_tools_placeholder"/>

        <TextView
            android:id="@+id/release_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_relative"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/activity_text_span"
            tools:text="@string/app_tools_placeholder"/>

    </LinearLayout>

</LinearLayout>